# colm_rs

./: Cargo.toml
.cargo/: config.toml
benches/: colm0_dec.rs  colm0_enc.rs  colm_0.rs  consts.rs
src/: colm0.rs  lib.rs  primitives.rs
tests/: test.rs
