[package]
name = "colm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.5"
criterion-cycles-per-byte = "0.1.2"
rand = "0.8.5"

[dependencies]
aes = { version = "0.8.1", optional = true }
aead = "0.4.3"
cipher = "0.4.3"
thiserror = "1.0.31"

[profile.bench]
#opt-level = 3
#codegen-units = 1 # Uncomment for AMD
#debug = false
#debug-assertions = false
#lto = "fat"
#rpath = false
#panic = "abort" This is ignored for bench profile
incremental = false

[features]
default = ["aes"]

[[bench]]
name = "colm-0"
path = "benches/colm_0.rs"
harness = false
