[package]
name = "colm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.5"
criterion-cycles-per-byte = "0.1.2"
rand = "0.8.5"

[dependencies]
aead = { version = "0.4.3", default-features = false }
aes = { version = "0.8.1", optional = true }
cipher = "0.4.3"

[features]
default = ["aes", "alloc"]
std = ["aead/std", "alloc"]
alloc = ["aead/alloc"]
heapless = ["aead/heapless"]

[profile.bench]
#opt-level = 3
#codegen-units = 1 # Uncomment for AMD
#debug = false
#debug-assertions = false
#lto = "fat"
#rpath = false
#panic = "abort" This is ignored for bench profile
incremental = false

[[bench]]
name = "colm-0"
path = "benches/colm_0.rs"
harness = false
